tests/cases/compiler-development/artifact/errors/diagnostic-missing-module.diagnostic
diagnostic error code=M0001 family=module source="tests/cases/compiler-development/artifact/errors/diagnostic-missing-module.ari" line=1 column=5 message="cannot find module file for 'missing_artifact_module'; searched tests/cases/compiler-development/artifact/errors/missing_artifact_module.ari, tests/cases/compiler-development/artifact/errors/missing_artifact_module.arih, tests/cases/compiler-development/artifact/errors/missing_artifact_module/mod.ari, tests/cases/compiler-development/artifact/errors/missing_artifact_module/mod.arih"
